making movie detail page

--- a/src/app/front/detail-movies/detail-movies.component.html
+++ b/src/app/front/detail-movies/detail-movies.component.html
@@ -1,35 +1,6 @@
 <div class="body">
-  <!-- Header -->
-  <header>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <a class="navbar-brand fs-2 text-white fw-bold" routerLink="/">LOGO</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarContent"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarContent"
-        >
-          <form method="POST">
-            <div class="search-icon">
-              <input class="search-form" type="text" placeholder="Search ..." />
-            </div>
-          </form>
-        </div>
-      </div>
-    </nav>
-    <!-- End Navbar -->
-  </header>
-  <!-- End Header -->
   <!-- Detail section -->
-  <section id="detail" class="mt-5">
+  <section id="detail" class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 col-12">
@@ -40,7 +11,9 @@
               alt="movie-poster"
             />
             <div class="watch-btn text-center">
-              <a href="#" class="a-watch-btn">Watch now</a>
+              <a href="#" class="a-watch-btn"
+                >Watch now <i class="fas fa-angle-double-right"></i
+              ></a>
             </div>
           </div>
         </div>
