--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,7 +1,5 @@
 <!-- Footer -->
-<footer id="footer">
-    <div class="d-flex justify-content-center">
-        Copyright By <a href="#"> Nano</a>. All rights are reserved.
-    </div>
+<footer id="footer" class="d-flex justify-content-center align-items-center">
+  <div>Copyright By Nano. All rights are reserved.</div>
 </footer>
 <!--End footer -->
