--- a/src/app/front/detail-movies/detail-movies.component.css
+++ b/src/app/front/detail-movies/detail-movies.component.css
@@ -1,19 +1,10 @@
-:root {
-  --bs-white: #ffffff;
-  --bs-LightPurple: #bc8cf2;
-  --bs-HardPurple: #aa14f0;
-  --bs-lightGray: #eeeeee;
-  --bs-green: #17d7a0;
-  --bs-Hardgreen: #179e78;
-  --bs-black: #000;
-}
 .body {
   position: relative;
+  background-color: var(--bs-Hardgreen);
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
   min-height: 100%;
-  font-family: "Poppins", sans-serif;
-  position: relative;
-  background-image: url("../../../assets/images/background.jpg");
   z-index: 1;
 }
 #detail::after {
@@ -27,13 +18,16 @@
   background: rgba(0, 0, 0, 0.5);
   box-shadow: inset 80px 100px 210px #000, inset -80px -100px 210px #000;
 }
+
 .movie-box {
-  background-color: var(--bs-HardPurple);
+  background-color: var(--bs-Hardgreen);
   border-radius: 15px;
-  padding: 20px;
+  padding: 30px;
   color: var(--bs-white);
 }
-
+.movie-box h1 {
+  color: var(--bs-yellow);
+}
 .movie-image {
   position: relative;
   overflow: hidden;
@@ -42,29 +36,36 @@
   border-radius: 7px;
   cursor: pointer;
 }
-.movies-images-detail img {
-  cursor: pointer;
-}
+
 .watch-btn {
   position: absolute;
   bottom: 20px;
   width: 100%;
 }
 .watch-btn .a-watch-btn {
-  display: inline-block;
+  position: relative;
   color: var(--bs-white);
   font-size: 18px;
   line-height: 50px;
   width: 70%;
   height: 50px;
-  background-color: #0a043c;
+  background-color: var(--bs-yellow);
   border: none;
   border-radius: 10px;
+}
+.watch-btn .a-watch-btn:hover {
+  background-color: var(--bs-LightYellow);
+  color: var(--bs-black);
+}
+.a-watch-btn i {
+  position: absolute;
+  right: 32px;
+  top: 16px;
 }
 .download-btn {
   color: var(--bs-white);
   background-color: #95cd41;
-  width: 200px;
+  width: 20%;
   height: 60px;
   line-height: 60px;
   font-size: 20px;
@@ -72,76 +73,12 @@
   border-radius: 10px;
 }
 .download-btn:hover {
-  color: white;
+  color: var(--bs-white);
   background-color: #78a733;
-  cursor: pointer;
-}
-.download-btn:active {
-  transform: scale(0.89);
 }
 .movies-images-detail img {
-  border-radius: 7px;
-  object-fit: fill;
-  height: 471.81px;
-}
-
-.movies-images {
-  position: relative;
-  cursor: pointer;
-  overflow: hidden;
-  height: 100%;
-}
-.movies-images::after {
-  content: "";
-  position: absolute;
-  background-color: var(--bs-LightPurple);
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  border-radius: 7px;
-  transition: opacity 0.5s ease-in;
-}
-.movies-images:hover::after {
-  opacity: 0.3;
-}
-
-.movies-images .movies-down {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  top: 0;
-  z-index: 2;
-  transition: opacity 0.5s ease-in;
-}
-.movies-images:hover .movies-down {
-  opacity: 1;
-}
-.movies-down .movies-title {
-  position: absolute;
-  bottom: 30px;
-}
-.movies-down .movies-title {
-  left: 0;
-  right: 0;
-}
-.movies-down .movies-title a {
-  color: var(--bs-white);
-  font-size: 18px;
+  height: 471.81px !important;
 }
 #related {
   padding: 80px 0 180px 0;
-}
-.owl-theme .owl-nav [class*="owl-"] {
-  width: 4%;
-  color: white !important;
-  background-color: var(--bs-HardPurple) !important;
-  height: 30px;
-  line-height: 36px !important;
-  border: none;
-  padding: 0 !important;
-  font: inherit;
 }
