some css changements

--- a/src/app/front/detail-movies/detail-movies.component.css
+++ b/src/app/front/detail-movies/detail-movies.component.css
@@ -76,7 +76,7 @@
   color: var(--bs-white);
   background-color: #78a733;
 }
-.movies-images-detail img {
+.movies-images img {
   height: 471.81px !important;
 }
 #related {
